plugins {
	id 'fabric-loom' version '1.12-SNAPSHOT'
	id 'maven-publish'
}

version = '1.0.0'
group = 'com.emile.instamine'

base {
	archivesName = 'instamine'
}

repositories {
	maven { url "https://maven.shedaniel.me/" } // Cloth Config
	maven { url "https://maven.terraformersmc.com/releases/" } // Mod Menu
	mavenCentral()
}

dependencies {
	// --- Fabric core ---
	minecraft "com.mojang:minecraft:1.21.10"
	mappings "net.fabricmc:yarn:1.21.10+build.2:v2"
	modImplementation "net.fabricmc:fabric-loader:0.17.3"
	modImplementation "net.fabricmc.fabric-api:fabric-api:0.138.0+1.21.10"

	// --- Cloth Config ---
	modApi "me.shedaniel.cloth:cloth-config-fabric:20.0.149"

	// --- Mod Menu ---
	modApi "com.terraformersmc:modmenu:16.0.0-rc.1"
}

processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName
	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}" }
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}
}
